testsuite/wcs/accesserror.bescmd.baseline
<?xml version="1.0" encoding="UTF-8"?>
<getHtmlForm>
    <response>
        <BESError>
            <Type>1</Type>
            <Message>WCS Request failed for url: http://g0dup05u-ts2.ecs.nasa.gov/cgi-bin/WCS/ceopL2AIRS2?service=WCS&version=1.0.0&request=GetCoverage&coverage=H2OMMRStd&crs=WGS84&bbox=-99.865000,34.235000,-95.115000,38.985000&format=netCDF&TIME=2002-08-31&resx=0.25&resy=0.25&interpolationMethod=Nearest%20neighbor with error: <!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML 2.0//EN">
<HTML><HEAD>
<TITLE>403 Forbidden</TITLE>
</HEAD><BODY>
<H1>Forbidden</H1>
You don't have permission to access /cgi-bin/WCS/ceopL2AIRS2
on this server.<P>
</BODY></HTML>
</Message>
            <Administrator>admin.email.address@your.domain.name</Administrator>
            <Location>
                <File>WCSRequest.cc</File>
                <Line>272</Line>
            </Location>
        </BESError>
    </response>
</getHtmlForm>
